<resources>
    <string name="app_name">Workout Tracker</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="zero">0</string>
    <string name="reps">Reps:</string>
    <string name="sets">Sets:</string>
    <string name="exercise_name">Exercise</string>
    <string name="notes">Notes:</string>
    <string name="default_note">Default Note</string>
    <string name="menu_track_workout">Track Workout</string>
    <string name="menu_edit_workout">Enter Workout</string>
    <string name="done">Done</string>
    <string name="cancel">Cancel</string>
    <string name="exercise">Exercise</string>
    <string name="exercise_name_label">Exercise Name:</string>
    <string name="save">Save</string>
    <string name="workouts_label">Workouts</string>
    <string name="menu_past_workouts">Past Workouts</string>
    <string-array name="default_exercises">
        <item>Arnold Press</item>
        <item>Back Extension"</item>
        <item>Bench Press</item>
        <item>Bicep Curls</item>
        <item>Burpees</item>
        <item>Calf Press</item>
        <item>Calf Raises</item>
        <item>Chest Dips</item>
        <item>Chin Ups</item>
        <item>Clean</item>
        <item>Clean &amp; Jerk</item>
        <item>Close Grip Bench Press</item>
        <item>Close Grip Push Ups</item>
        <item>Crunches</item>
        <item>Deadlift</item>
        <item>Decline Bench Press</item>
        <item>Dips</item>
        <item>Flies</item>
        <item>Front Raise</item>
        <item>Good Mornings</item>
        <item>Hang Clean</item>
        <item>Hang Power Clean</item>
        <item>High Row</item>
        <item>Hip Thrust</item>
        <item>JM Press</item>
        <item>Jumping Jacks</item>
        <item>Lateral Raise</item>
        <item>Leg Curls</item>
        <item>Leg Extensions</item>
        <item>Leg Press</item>
        <item>Leg Raises</item>
        <item>Lunges</item>
        <item>Military Press</item>
        <item>Pike Press</item>
        <item>Pike Push Ups</item>
        <item>Plank</item>
        <item>Forearm Plank</item>
        <item>Power Clean</item>
        <item>Pull Ups</item>
        <item>Lat Pulldown</item>
        <item>RDLs</item>
        <item>Reverse Lunge</item>
        <item>Rows</item>
        <item>Russian Twists</item>
        <item>Seated Calf Raises</item>
        <item>Shoulder Press</item>
        <item>Shoulder Shrugs</item>
        <item>Side Lunge</item>
        <item>Side Plank</item>
        <item>Single Leg Deadlift</item>
        <item>Single Leg Hip Thrust</item>
        <item>Sit Ups</item>
        <item>Squats</item>
        <item>Standing Calf Raises</item>
        <item>Step Ups</item>
        <item>Straight Leg Deadlift</item>
        <item>Thrusters</item>
        <item>Tricep Dips</item>
        <item>Tricep Extensions</item>
        <item>Twisting Crunches</item>
        <item>Twisting Sit Ups</item>
        <item>Upright Rows</item>
        <item>V-Sit Ups</item>
        <item>Wall Sit</item>
    </string-array>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="save_workout_as">Save Workout As:</string>
    <string name="save_workout">Save Workout</string>
    <string name="workout">Workout</string>
    <string name="dev_name">Brandon Jackson</string>
    <string name="dev_email">jacksob1@rose-hulman.edu</string>
    <string name="view_workout">View Workout</string>
    <string name="template_button_text">Use As\nTemplate</string>
    <string name="share_button_text">Share</string>
    <string name="edit_button_text">Edit</string>
    <string name="loading">Loading...</string>
    <string name="logout">Logout</string>
    <string name="edit">Edit</string>
    <string name="name">Name</string>
    <string name="profile_label">Your Profile</string>
    <string name="detail_1">Detail 1</string>
    <string name="detail_2">Detail 2</string>
    <string name="profile">Profile</string>
    <string name="edit_profile">Edit profile</string>
    <string name="your_name_hint">Your name</string>
    <string name="age">age</string>
    <string name="major">major</string>
    <string name="upload_photo">Upload Photo</string>
    <string name="image">Image</string>
    <string name="email_address">Email Address</string>
    <string name="subject">Subject</string>
    <string name="email_message">Email Message</string>
    <string name="send">Send</string>
    <string name="attachment">attachment</string>
    <string name="made_by">Made By:</string>
</resources>