<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_background"
    android:padding="20dp"
    tools:context="UserFragment">

    <TextView
        android:id="@+id/profile_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_above="@id/profile_name"
        android:textSize="24sp"
        android:text="@string/profile_label" />
    <TextView
        android:id="@+id/profile_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="36sp"
        android:layout_centerHorizontal="true"
        android:layout_above="@id/profile_icon"
        android:text="@string/name" />
    <ImageView
        android:id="@+id/profile_icon"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/ic_baseline_person_24"
        android:layout_centerInParent="true"/>
    <TextView
        android:id="@+id/profile_detail1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/profile_icon"
        android:textSize="24sp"
        android:text="@string/detail_1" />
    <TextView
        android:id="@+id/profile_detail2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/profile_detail1"
        android:text="@string/detail_2" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/profile_detail2">
        <Button
            android:id="@+id/clear_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="20sp"
            android:text="@string/logout" />

        <Button
            android:id="@+id/done_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="20sp"
            android:layout_alignParentEnd="true"
            android:text="@string/edit" />
    </RelativeLayout>

</RelativeLayout>