<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="edu.rosehulman.workouttracker.ui.gallery.ExerciseListFragment"
        android:label="@string/menu_track_workout"
        tools:layout="@layout/fragment_exercise_list" />

    <fragment
        android:id="@+id/nav_exercise_form"
        android:name="edu.rosehulman.workouttracker.ui.home.HomeFragment"
        android:label="@string/menu_edit_workout"
        tools:layout="@layout/fragment_exercise_form" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="edu.rosehulman.workouttracker.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
</navigation>