<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="15dp"
    android:padding="10dp"
    android:background="#FFE5E5E5">
    <TextView
        android:id="@+id/exercise_name_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/exercise_name"
        android:textSize="24sp"
        android:textStyle="bold"/>
    <ImageView
        android:id="@+id/delete_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:src="@drawable/ic_baseline_delete_24"/>
    <RelativeLayout
        android:id="@+id/sets_relative_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/exercise_name_text_view">
        <TextView
            android:id="@+id/exercise_sets_label_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sets"
            android:textSize="18sp"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/exercise_sets_value_text_view"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/zero"
            android:textSize="18sp"
            android:layout_alignParentEnd="true"
            android:textAlignment="textEnd"
            android:textStyle="bold"/>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/reps_relative_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/sets_relative_layout">
        <TextView
            android:id="@+id/exercise_reps_label_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reps"
            android:textSize="18sp"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/exercise_reps_value_text_view"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/zero"
            android:textSize="18sp"
            android:layout_alignParentEnd="true"
            android:textAlignment="textEnd"
            android:textStyle="bold"/>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/notes_relative_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/reps_relative_layout">
        <TextView
            android:id="@+id/exercise_notes_label_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/notes"
            android:textSize="18sp"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/exercise_notes_value_text_view"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/default_note"
            android:textSize="18sp"
            android:layout_alignParentEnd="true"
            android:textAlignment="textEnd"
            android:textStyle="bold"
            />
    </RelativeLayout>

</RelativeLayout>