<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.ExerciseEditFragment"
    android:padding="15dp"
    android:background="@color/app_background">
    <RelativeLayout
        android:id="@+id/exercise_name_picker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingVertical="10dp"
            android:text="@string/exercise_name_label"
            android:textSize="24sp"
            android:textColor="@color/white"
            />
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/dropdown_menu"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:hint="@string/exercise">

            <AutoCompleteTextView
                android:id="@+id/picker_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapWords"
                android:background="@color/light_gray"
                />

        </com.google.android.material.textfield.TextInputLayout>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/exercise_sets"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/exercise_name_picker"
        >
        <TextView
            android:id="@+id/exercise_sets_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sets"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@color/white"/>
        <EditText
            android:id="@+id/exercise_sets_value"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:inputType="number"
            android:textColor="@color/white"
            android:textAlignment="textEnd"
            />
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/exercise_reps"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/exercise_sets"
        >
        <TextView
            android:id="@+id/exercise_reps_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reps"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@color/white"/>
        <EditText
            android:id="@+id/exercise_reps_value"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:inputType="number"
            android:textColor="@color/white"
            android:textAlignment="textEnd"
            />
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/exercise_notes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/exercise_reps"
        >
        <TextView
            android:id="@+id/exercise_notes_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/notes"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@color/white"/>
        <EditText
            android:id="@+id/exercise_notes_value"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:inputType="textCapSentences"
            android:textAlignment="textEnd"
            android:textColor="@color/white"
            />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/exercise_notes">
        <Button
            android:id="@+id/cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/done_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:layout_alignParentEnd="true"
            android:text="@string/done" />
    </RelativeLayout>
</RelativeLayout>