<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.SaveWorkoutFragment"
    android:background="@color/app_background">
    <RelativeLayout
        android:id="@+id/text_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        >
        <TextView
            android:id="@+id/save_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save_workout_as"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/white"/>
        <EditText
            android:id="@+id/workout_name"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:inputType="text"
            android:textColor="@color/white"
            android:textAlignment="textEnd"
            />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_field">
        <Button
            android:id="@+id/cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/done_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:layout_alignParentEnd="true"
            android:text="@string/done" />
    </RelativeLayout>
</RelativeLayout>